- fixups pulled from radial-responsive-menu
- a couple typo fixes

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ Inspired and based on research by <a href="http://dl.acm.org/citation.cfm?doid=1
 Built using jQuery version 1.8.3 and CSS 3</p>
 
 <p>[ <a href="http://www.oswego.edu/~arahmadi/square-menu/" target="_blank">Live Demo</a> ]</p>
+<p>[ <a href="demo.html" target="_blank">Live Demo (Local host)</a> ]</p>
 
 <h2>Author</h2>
 
@@ -128,7 +129,7 @@ To make square menu items, just make sure this options is the same with <code>sq
 
 <p><code>togglePosition</code> is the orientation of on which way  the menu appears based on the <code>togglePosition</code> value. As the menu is targeted to be used in mobile screen, there
 are 4 value for this options: <code>top-left</code>, <code>top-right</code>, <code>bottom-right</code> and <code>bottom-left</code>.
-This option determine the appearance direction of menu items NOT the position of toggle button.
+This option determines the appearance direction of menu items NOT the position of toggle button.
 <br><em>Default value</em>: <code>top-left</code></p>
       </section>
       <footer>
